--- a/documentos-web/src/main/webapp/src/style.css
+++ b/documentos-web/src/main/webapp/src/style.css
@@ -1,80 +1,80 @@
- .navbar-inverse {
-     /* background-color:transparent !important;
-      border-color:transparent;
-      background-image:none;
-      box-shadow:none; */ 
-      background-color: #2c3e50;     
- }
- .caret.caret-up {
+.navbar-inverse {
+    /* background-color:transparent !important;
+     border-color:transparent;
+     background-image:none;
+     box-shadow:none; */ 
+    background-color: #2c3e50;     
+}
+.caret.caret-up {
     border-top-width: 0;
     border-bottom: 4px solid #000;
-  }
+}
 #busqueda{
- background-color: whitesmoke;
- color: grey;
- border: grey;
+    background-color: whitesmoke;
+    color: grey;
+    border: grey;
 }
 #busqueda:hover
 {
-background-color:grey;
-color:whitesmoke;
+    background-color:grey;
+    color:whitesmoke;
 }
 
 #busqueda:active{
-	background-color: yellow;
+    background-color: yellow;
 }
 #busqueda:focus {     
-   background-color:grey;
-color:whitesmoke;  
+    background-color:grey;
+    color:whitesmoke;  
 }
 #busqueda:target{     
-   background-color:grey;
-color:whitesmoke;  
+    background-color:grey;
+    color:whitesmoke;  
 }
 .Intro{
-	background-image:url(https://preview.ibb.co/bZVMK7/Libro.jpg);
-	height: 100vh;
-	background-size: cover;
-	text-align: center;
-	padding-top:25%; 
+    background-image:url(https://preview.ibb.co/bZVMK7/Libro.jpg);
+    height: 95.9vh;
+    background-size: cover;
+    text-align: center;
+    padding-top:25%;
 }
 
 .finalLibros{
-        background-image:url(http://www.readbreatherelax.com/wp-content/uploads/2013/07/book-the-end-hd-wallpaper.jpg);
-        background-attachment: fixed;
-        background-position: center;
-        height: auto;
-	width: 100%;
-	text-align: center;
-	padding-top:10%; 
-        padding-bottom: 10%;
-        font-size: 6.2vw;
-       
+    background-image:url(http://www.readbreatherelax.com/wp-content/uploads/2013/07/book-the-end-hd-wallpaper.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    height: auto;
+    width: 100%;
+    text-align: center;
+    padding-top:10%; 
+    padding-bottom: 10%;
+    font-size: 6.2vw;
+    
 }
 
 
 .center-cropped {
-  width: 400px;
-  height: 300px;
-  background-position: center center;
-  background-repeat: no-repeat;
+    width: 400px;
+    height: 300px;
+    background-position: center center;
+    background-repeat: no-repeat;
 }
 
 body{
-	padding-top:20px;
+    padding-top:20px;
 }
 h1{
-	font-size: 5em;
-	font-weight: 700;
-	color:white;
-
-	text-shadow: 0px 4px 3px rgba(0,0,0,0.4) ,
-	0px 8px 13px rgba(0,0,0,0.1),
-	0px 18px 23px rgba(0,0,0,0.1)
+    font-size: 5em;
+    font-weight: 700;
+    color:white;
+    
+    text-shadow: 0px 4px 3px rgba(0,0,0,0.4) ,
+        0px 8px 13px rgba(0,0,0,0.1),
+        0px 18px 23px rgba(0,0,0,0.1)
 }
 hr {
-
-	width: 400px;
+    
+    width: 400px;
 }
 
 .limitar {
@@ -82,7 +82,7 @@ hr {
     overflow: hidden;
     text-overflow: ellipsis;
     font-family: 'Roboto', sans-serif;
-
+    
     
     padding: 1px 1px 1px 1px;
     border-radius: 10px;
@@ -98,11 +98,42 @@ hr {
 
 
 .limitar:hover {
-   
-   white-space: normal; 
-   height:80px;
-   width: 190px;
-   overflow: visible;
-   overflow-wrap: break-word;
-   
+    
+    white-space: normal; 
+    height:80px;
+    width: 190px;
+    overflow: visible;
+    overflow-wrap: break-word;
+    
+}
+
+.jumbotron h1
+{ text-align: center;
+  color:white;
+}
+
+body{
+    
+    font-family: 'Roboto', sans-serif;
+}
+#CursoDiv
+{
+    color:white; 
+    height: 250px;
+    background-size: cover;  
+     text-align: center;
+     background-position: center center;
+    background-image: url(https://images.unsplash.com/photo-1514820044349-39f34ceb5f8b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5ad63b9224ab39a7ae2d0ffbc43e1a7b&auto=format&fit=crop&w=1050&q=80)
+      
+}
+
+#CursoDiv2
+{
+    color:white;   
+    height: 250px;
+    background-size: cover;  
+     text-align: center;
+     background-position: center center;
+    background-image: url(https://images.pexels.com/photos/185762/pexels-photo-185762.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260)
+      
 }
