--- a/documentos-web/src/main/webapp/src/style.css
+++ b/documentos-web/src/main/webapp/src/style.css
@@ -14,15 +14,42 @@
     color: grey;
     border: grey;
 }
+
 #busqueda:hover
 {
     background-color:grey;
     color:whitesmoke;
 }
 
-#busqueda:active{
-    background-color: yellow;
+.loginbutton
+{
+    background-color: #2c3e50; 
+    border-color: #2c3e50;
 }
+.actuabbuton{
+    background-color: #004D40; 
+    border-color: #004D40;
+}
+.actuabbuton:focus {     
+    background-color: #007a66; 
+    border-color: #007a66;
+}
+.actuabbuton:active{     
+ background-color: #007a66; 
+    border-color: #007a66; 
+}
+.actuabbuton:hover
+{
+     background-color: #007a66; 
+    border-color: #007a66;
+    
+}
+.loginbutton:hover
+{
+    background-color: #46586A;
+    border-color: #46586A;
+}
+
 #busqueda:focus {     
     background-color:grey;
     color:whitesmoke;  
@@ -33,7 +60,7 @@
 }
 .Intro{
     background-image:url(https://preview.ibb.co/bZVMK7/Libro.jpg);
-    height: 95.9vh;
+    height: 97.5vh;
     background-size: cover;
     text-align: center;
     padding-top:25%;
