--- a/documentos-web/src/main/webapp/src/style.css
+++ b/documentos-web/src/main/webapp/src/style.css
@@ -5,6 +5,10 @@
      box-shadow:none; */ 
     background-color: #2c3e50;     
 }
+.canequita:hover
+{
+    background-color:darkgray;
+}
 .caret.caret-up {
     border-top-width: 0;
     border-bottom: 4px solid #000;
