--- a/documentos-web/src/main/webapp/src/style.css
+++ b/documentos-web/src/main/webapp/src/style.css
@@ -52,6 +52,15 @@
 
 }
 
+#modalPayPal{
+    background-color: #2c3e50;
+    
+}
+
+#modalTDC{
+    background-color: #2c3e50;
+}
+
 
 .center-cropped {
     width: 400px;
