Cambios en EL POST y PUT de COMpra

--- a/documentos-web/src/main/webapp/src/style.css
+++ b/documentos-web/src/main/webapp/src/style.css
@@ -27,6 +27,13 @@
     background-color:grey;
     color:whitesmoke;  
 }
+
+#MPGrupo{
+    background-color:rgb(255,230,255);
+}
+#colorEscoger{
+    color: black;
+}
 #busqueda:target{     
     background-color:grey;
     color:whitesmoke;  
