--- a/documentos-web/src/main/webapp/src/style.css
+++ b/documentos-web/src/main/webapp/src/style.css
@@ -1,4 +1,3 @@
-
 .navbar-inverse {
     /* background-color:transparent !important;
      border-color:transparent;
@@ -123,6 +122,40 @@ hr {
 }
 
 
+.menuUser{
+    width:200px;
+    height: 50px;
+    border-bottom: 1px solid #000066EC ;
+    overflow: hidden;
+    opacity: .5;
+
+
+}
+
+.linkUser{
+    position: absolute;
+    float: right;
+    color: white;
+    opacity: .9;
+    font-size: 1.2em;
+    padding-left: 10px;
+    padding-top: 10px;
+    text-decoration: none;
+
+
+}
+
+
+.menuUser a:hover {
+    background-color: white;
+    width:200px;
+    height: 50px;
+    color: black;
+    opacity: 40;
+    text-decoration: none;
+
+}
+
 .infoUser{
 
     padding-top: 120px;
@@ -161,7 +194,7 @@ hr {
 }
 
 .tablaListaU tr:hover td{
-    background-color: #2c3e50;
+    background-color: #8c8c8c;
     color: white;
 }
 
@@ -185,6 +218,11 @@ hr {
     background-color: #255625; 
     border-bottom-color: #255625;
     color: white;
-
 }
 
+.listaReservas {
+  display:inline;  display:inline;
+     padding-left:3px;
+     padding-right:3px;
+     
+}
