--- a/documentos-web/src/main/webapp/src/style.css
+++ b/documentos-web/src/main/webapp/src/style.css
@@ -395,6 +395,30 @@ body{
     background-size: cover;  
      text-align: center;
      background-position: center center;
-    background-image: url(https://images.pexels.com/photos/185762/pexels-photo-185762.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260)
+    background-image: url(https://images.pexels.com/photos/185762/pexels-photo-185762.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+      
+}
+
+
+#CursoDiv3
+{
+    color:white;   
+    height: 250px;
+    background-size: cover;  
+     text-align: center;
+     background-position: center center;
+    background-image: url(https://images.pexels.com/photos/958164/pexels-photo-958164.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+      
+}
+
+
+#CursoDiv4
+{
+    color:white;   
+    height: 250px;
+    background-size: cover;  
+     text-align: center;
+     background-position: center center;
+    background-image: url(https://images.unsplash.com/photo-1519680980544-54b7cc4ec68a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=edd60eb86247a438c7e310d4994b6f47&auto=format&fit=crop&w=1350&q=80);
       
 }
