--- a/documentos-web/src/main/webapp/src/style.css
+++ b/documentos-web/src/main/webapp/src/style.css
@@ -14,6 +14,11 @@
     color: grey;
     border: grey;
 }
+#facturaContainer
+{
+    
+}
+
 #busqueda:hover
 {
     background-color:grey;
@@ -293,7 +298,7 @@ hr {
     color:whitesmoke;  
 }
 .Intro{
-    background-image:url(https://preview.ibb.co/bZVMK7/Libro.jpg);
+    background-image:url(https://images.pexels.com/photos/159621/open-book-library-education-read-159621.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
     height: 97.5vh;
     background-size: cover;
     text-align: center;
@@ -396,5 +401,42 @@ body{
      text-align: center;
      background-position: center center;
     background-image: url(https://images.pexels.com/photos/185762/pexels-photo-185762.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260)
+      
+}
+
+#tarjetaFondo
+{
+    color:white;   
+    height: 250px;
+    background-size: cover;  
+     text-align: center;
+     background-position: center center;
+    background-color: #1a52c6;
+    background-image: url(https://images.pexels.com/photos/50987/money-card-business-credit-card-50987.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)      
+}
+
+#paypalFondo
+{
+    color:white;   
+    height: 250px;
+    background-size: cover;  
+     text-align: center;
+     background-position: center center;
+         background-color: #1a52c6;
+
+    background-image:url(https://images.pexels.com/photos/34204/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+      
+}
+
+#facturasFondo
+{
+    color:white;   
+    height: 250px;
+    background-size: cover;  
+     text-align: center;
+     background-position: center center;
+         background-color: #1a52c6;
+
+    background-image:url(https://images.pexels.com/photos/164686/pexels-photo-164686.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
       
 }
